--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="media-player">
-        <video id="videoPlayer" width="600" controls>
-            <source src="C:\Users\udayy\OneDrive\Desktop\images\movie.mp4" type="video/mp4">
+    
+        <iframe width="560" height="315" src="https://ww3.vcdnlare.com/v/SKTzWrPK8wQvObs?sid=4123&t=hls" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             Your browser does not support the video tag.
         </video>
         <div class="controls">
